--- a/config/skey.conf
+++ b/config/skey.conf
@@ -1,3 +1,6 @@
 {
-  "SecretKey": "SACF5MZE2ZDFNE23MNX5DH7Z2CJ6GXBY6WQJKFJIOBL7FLHKI5VKSIW6"
+  "AccountID": "GA4LHJHCNVXFRNQO5VA3CIDF5NAITNMQS5AWFUJ6SIXEAD4TQNYEOJGV",
+  "SecretKey": "SACF5MZE2ZDFNE23MNX5DH7Z2CJ6GXBY6WQJKFJIOBL7FLHKI5VKSIW6",
+  "IssuerID" : "GBSDR7PRX5CLRW6ZAIYUKJPTTHFNEQXZPQ66G6MOOZ4JDRRIJBZRDXVC",
+  "Credit" : "NBC"
 }
